safari flex gap fix

--- a/css/enfants.css
+++ b/css/enfants.css
@@ -3,14 +3,13 @@
     display:flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    row-gap: 2rem;
-    column-gap:2rem;
+    margin: 10px;
 }
 
 .enfant-item{
     position: relative;
     background-color: white;
-    border-radius: 20px;
+    border-radius: 10px;
     flex-basis: 25%;
     display:flex;
     flex-direction: column;
